--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -25,6 +25,7 @@
     <ul class="collapsible">
         {% for treatment in treatments %}
         <li>
+            <!-- {% if session.user.fullname |lower == treatment_client|lower %} -->
             <div class="collapsible-header white-text brown darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
@@ -44,7 +45,7 @@
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s6 m6">
-                        <strong>{{ treatment.user_name }}</strong>
+                        <strong>{{ treatment.treatment_client }}</strong>
                         <strong>Subjective History: </strong>
                         <p>{{ treatment.treatment_subjective }}</p>
                         <strong>Observations: </strong>
@@ -61,6 +62,7 @@
                     </div>
                 </div>
             </div>
+            <!-- {% endif %} -->
         </li>
         {% endfor %}
     </ul>
