--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -5,6 +5,15 @@
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user.id) }}">
+            <!-- client username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                    <input id="user_name" name="user_name" minlength="3" maxlength="25"
+                        type="text" value="{{ user.user_name }}" class="validate" required>
+                    <label for="user_name">Client Username</label>
+                </div>
+            </div>
             <!-- client name -->
             <div class="row">
                 <div class="input-field col s12">
@@ -12,6 +21,24 @@
                     <input id="client_name" name="client_name" minlength="3" maxlength="25"
                         type="text" value="{{ user.fullname }}" class="validate" required>
                     <label for="client_name">Client Name</label>
+                </div>
+            </div>
+            <!-- client Email -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                    <input id="email" name="email" minlength="3" maxlength="25"
+                        type="text" value="{{ user.email }}" class="validate" required>
+                    <label for="email">Client Email</label>
+                </div>
+            </div>
+            <!-- client Phone -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                    <input id="phone" name="phone" minlength="3" maxlength="25"
+                        type="text" value="{{ user.phone }}" class="validate" required>
+                    <label for="phone">Client Phone</label>
                 </div>
             </div>
             <!-- submit button -->
