--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -20,19 +20,23 @@
             </div>
         </form>
     </div>
-
+    
+    <h3> 1 {{ session.user }}</h3>
+    <h3> 2 {{ user.fullname }}</h3>
+    <h3></h3>
     {% if treatments|length > 0 %}
     <ul class="collapsible">
         {% for treatment in treatments %}
         <li>
-            <!-- {% if session.user.fullname |lower == treatment_client|lower %} -->
+        {% if session.name|lower == treatment.treatment_client|lower %}
             <div class="collapsible-header white-text brown darken-4 text-shadow">
+                <h3>{{ treatment.treatment_client }}</h3>
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
-                    {% if session.user|lower == treatment.created_by|lower %}
-                        <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small green accent-4">Done</a>
-                        <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1">Edit</a>
-                    {% endif %}
+                    <!-- {% if session.user|lower == treatment.created_by|lower %}
+                    <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small green accent-4">Done</a>
+                    <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1">Edit</a>
+                    {% endif %} -->
                 </div>
                 <div class="col s9">
                     <strong> {{ treatment.treatment_name }}</strong> : {{ treatment.treatment_date }}
@@ -62,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <!-- {% endif %} -->
+        {% endif %}
         </li>
         {% endfor %}
     </ul>
