--- a/milestone3/templates/edit_treatment.html
+++ b/milestone3/templates/edit_treatment.html
@@ -14,7 +14,7 @@
                     <label for="treatment_client">Treatment Client Name</label>
                 </div>
             </div>
-            <!-- treatment usercopy -->
+            <!-- treatment usercopy
             <div class="row ">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix brown-text text-darken-4"></i>
@@ -22,7 +22,7 @@
                         type="text" class="validate" value="{{ treatment.treatment_usr }}" required>
                     <label for="treatment_usr">Treatment usercopy</label>
                 </div>
-            </div>
+            </div> -->
             <!-- treatment name -->
             <div class="row">
                 <div class="input-field col s12">
