--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -34,10 +34,10 @@
                 <!-- <h3>{{ treatment.treatment_client }}</h3> -->
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
-                    <!-- {% if session.user|lower == treatment.created_by|lower %}
-                    <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small green accent-4">Done</a>
-                    <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1">Edit</a>
-                    {% endif %} -->
+                    {% if session.user|lower == treatment.created_by|lower %}
+                    <!-- <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small green accent-4">Done</a> -->
+                    <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
+                    {% endif %}
                 </div>
                 <div class="col s9">
                     <strong>  {{ treatment.treatment_client }} - {{ treatment.treatment_name }}</strong> : {{ treatment.treatment_date }}
