--- a/milestone3/templates/profile.html
+++ b/milestone3/templates/profile.html
@@ -8,8 +8,8 @@
                 <h3 class="center-align light-blue-text text-darken-4">
                     Book your session below
                 </h3>
-                <h3 id="user_fullname" class="">{{ fullname }}</h3>
-                <h3 id="user_email" class="">{{ email }}</h3>
+                <!-- <h3 id="user_fullname" class="">{{ fullname }}</h3>
+                <h3 id="user_email" class="">{{ email }}</h3> -->
                 <div class="calendly-inline-widget" data-url="https://calendly.com/balancedtraining/sports-massage?hide_gdpr_banner=1" style="width:100%;height:630px;"></div>
             </div>
         </div>
