--- a/milestone3/templates/profile.html
+++ b/milestone3/templates/profile.html
@@ -8,7 +8,8 @@
                 <h3 class="center-align light-blue-text text-darken-4">
                     Book your session below
                 </h3>
-                <iframe src="https://calendly.com/balancedtraining/sports-massage?embed_domain=8080-codegreg1-milestone3gre-nzu3fiowbua.ws-eu71.gitpod.io&amp;embed_type=Inline&amp;hide_gdpr_banner=1&amp;name={{ fullname }}&amp;email={{ email}}" width="100%" height="100%" frameborder="0"></iframe>
+                <iframe src="https://calendly.com/balancedtraining/sports-massage?&amp;embed_type=Inline&amp;hide_gdpr_banner=1&amp;name={{ fullname }}&amp;email={{ email}}" 
+                width="100%" height="100%" frameborder="0"></iframe>
              </div>
         </div>
     </div>
