--- a/milestone3/templates/edit_treatment.html
+++ b/milestone3/templates/edit_treatment.html
@@ -14,22 +14,13 @@
                     <label for="treatment_client">Treatment Client Name</label>
                 </div>
             </div>
-            <!-- treatment usercopy
-            <div class="row ">
-                <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix brown-text text-darken-4"></i>
-                    <input id="treatment_usr" name="treatment_usr" minlength="5" maxlength="50"
-                        type="text" class="validate" value="{{ treatment.treatment_usr }}" required>
-                    <label for="treatment_usr">Treatment usercopy</label>
-                </div>
-            </div> -->
             <!-- treatment name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix brown-text text-darken-4"></i>
                     <input id="treatment_name" name="treatment_name" minlength="5" maxlength="50"
                         type="text" class="validate" value="{{ treatment.treatment_name }}" required>
-                    <label for="treatment_name">Treatment Name</label>
+                    <label for="treatment_name">Treatment Area</label>
                 </div>
             </div>
             <!-- treatment subjective history -->
