--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -20,10 +20,6 @@
             </div>
         </form>
     </div>
-    
-    <!-- <h3> 1 {{ fullname }}</h3>
-    <h3> 2 {{ session.user }}</h3>
-    <h3> 3 {{ treatment_client }}</h3> -->
     <h3></h3>
     {% if treatments|length > 0 %}
     <ul class="collapsible">
@@ -41,21 +37,30 @@
                 </div>
                 <div class="col s9">
                     <strong>  {{ treatment.treatment_client }} - {{ treatment.treatment_name }}</strong> : {{ treatment.treatment_date }}
+                        {% if treatment.treatment_name|lower == "back" %}
+                        <a href="../static/advice/Exercise Advice Sheet - Back.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+                        {% elif treatment.treatment_name|lower == "shoulder" %}
+                        <a href="../static/advice/Exercise Advice Sheet - Shoulder.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+                        {% elif treatment.treatment_name|lower == "knee" %}
+                        <a href="../static/advice/Exercise Advice Sheet - Knee.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+                        {% else %}
+                        <a href="../static/advice/Exercise Advice Sheet.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+
+                        {% endif %}
                     {% if treatment.follow_up == "on" %}
-                        <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
-                            data-position="right" data-tooltip="URGENT!"></i>
+                    <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
+                        data-position="right" data-tooltip="URGENT!"></i>
                     {% endif %}
                 </div>
             </div>
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s6 m6">
-                        <strong>{{ treatment.treatment_client }}</strong>
                         <strong>Subjective History: </strong>
                         <p>{{ treatment.treatment_subjective }}</p>
                         <strong>Observations: </strong>
                         <p>{{ treatment.treatment_observation }}</p>
-                        <strong>Special/Functional Tests: </strong>
+                        <strong>Special/Functional Tests: </strong> 
                         <p>{{ treatment.treatment_special_tests }}</p>
                     </div>
                     <div class="col s6 m6">
