--- a/milestone3/templates/base.html
+++ b/milestone3/templates/base.html
@@ -22,7 +22,7 @@
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_treatments') }}">Home</a></li>
                     {% if session.user %}
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
                         {% if session.user|lower == "gadmin"|lower %}
                         <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
                         <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
@@ -41,10 +41,10 @@
             <li><h4 class="center-align brown-text text-darken 4">Treatment Manager</h4></li>
             <li><a href="{{ url_for('get_treatments') }}">Home</a></li>
             {% if session.user %}
-                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
+                {% if session.user|lower == "gadmin"|lower %}
                 <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
-                {% if session.user|lower == "Greg"|lower %}
-                    <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
+                <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
                 {% endif %}
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
