--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -9,7 +9,7 @@
                 <div class="input-field col s12 m8">
                     <i class="fas fa-search prefix brown-text text-darken-4"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query">Search Treatments</label>
+                    <label class="searchlabel" for="query">Search Treatments</label>
                 </div>
                 <div class="col s12 m4">
                     <a href="{{ url_for('get_treatments') }}" class="red btn text-shadow reseter">Reset</a>
