Rearrange of edit client to show client records

--- a/milestone3/templates/base.html
+++ b/milestone3/templates/base.html
@@ -22,7 +22,9 @@
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_treatments') }}">Home</a></li>
                     {% if session.user %}
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
+                    {% if session.user|lower != "gadmin"|lower %}
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
+                    {% endif %}
                         {% if session.user|lower == "gadmin"|lower %}
                         <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
                         <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
@@ -42,7 +44,9 @@
             <li><h4 class="center-align brown-text text-darken 4">Treatment Manager</h4></li>
             <li><a href="{{ url_for('get_treatments') }}">Home</a></li>
             {% if session.user %}
+                {% if session.user|lower != "gadmin"|lower %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Booking</a></li>
+                {% endif %}
                 {% if session.user|lower == "gadmin"|lower %}
                 <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
                 <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
