--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -1,7 +1,65 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="brown-text text-darken-4 center-align">Edit Client</h3>
+    <h3 class="brown-text text-darken-4 center-align">Client Records</h3>
+
+    {% if treatments|length > 0 %}
+    <ul class="collapsible">
+        {% for treatment in treatments %}
+        <li>
+        {% if user.fullname|lower == treatment.treatment_client|lower %}
+            <div class="collapsible-header white-text brown darken-4 text-shadow">
+                <div class="col s3">
+                    <i class="fas fa-caret-down"></i>
+                    {% if session.user|lower == treatment.created_by|lower %}
+                    <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
+                    {% endif %}
+                </div>
+                <div class="col s9">
+                    <strong class="larger">  {{ treatment.treatment_client }} - {{ treatment.treatment_name|capitalize }}</strong> : {{ treatment.treatment_date }}
+                        {% if treatment.treatment_name|lower == "back" %}
+                        <a href="../static/advice/Exercise Advice Sheet - Back.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+                        {% elif treatment.treatment_name|lower == "shoulder" %}
+                        <a href="../static/advice/Exercise Advice Sheet - Shoulder.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+                        {% elif treatment.treatment_name|lower == "knee" %}
+                        <a href="../static/advice/Exercise Advice Sheet - Knee.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+                        {% else %}
+                        <a href="../static/advice/Exercise Advice Sheet.pdf" download>:  Recovery Advice - <i class="fas fa-download"></i></a>
+
+                        {% endif %}
+                    {% if treatment.follow_up == "on" %}
+                    <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
+                        data-position="right" data-tooltip="URGENT!"></i>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="collapsible-body">
+                <div class="row">
+                    <div class="col s6 m6">
+                        <strong>Subjective History: </strong>
+                        <p>{{ treatment.treatment_subjective }}</p>
+                        <strong>Observations: </strong>
+                        <p>{{ treatment.treatment_observation }}</p>
+                        <strong>Special/Functional Tests: </strong> 
+                        <p>{{ treatment.treatment_special_tests }}</p>
+                    </div>
+                    <div class="col s6 m6">
+                        <strong>Range of Movement: </strong>
+                        <p>{{ treatment.treatment_rom }}</p>
+                        <strong>Palpation: </strong>
+                        <p>{{ treatment.treatment_palpation }}</p>
+                        <p><em>by: {{ treatment.created_by }}</em></p>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        </li>
+        {% endfor %}
+    </ul>
+    {% else %}
+        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+    {% endif %}
+
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user.id) }}">
@@ -63,5 +121,6 @@
             </div>
         </form>
     </div>
+
 
 {% endblock %}
