--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -20,7 +20,7 @@
                         <span class="card-title">{{ user.fullname }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="{{ url_for('edit_client', user_id=user.id) }}" class="btn green accent-4">Edit</a>
+                        <a href="{{ url_for('edit_client', user_id=user.id) }}" class="btn green accent-4">Records</a>
                         <a href="{{ url_for('delete_client', user_id=user.id) }}" class="btn red lighten-1">Delete</a>
                     </div>
                 </div>
