--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="brown-text text-darken-4 center-align">My Treatments</h3>
+    <h3 class="brown-text text-darken-4 center-align">Treatments</h3>
 
+    {% if session["user"] == "gadmin" %}
     <div class="row card-panel grey lighten-5">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
@@ -20,18 +21,16 @@
             </div>
         </form>
     </div>
-    <h3></h3>
+    {% endif %}
     {% if treatments|length > 0 %}
     <ul class="collapsible">
         {% for treatment in treatments %}
         <li>
         {% if fullname|lower == treatment.treatment_client|lower or session["user"] == "gadmin" %}
             <div class="collapsible-header white-text brown darken-4 text-shadow">
-                <!-- <h3>{{ treatment.treatment_client }}</h3> -->
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == treatment.created_by|lower %}
-                    <!-- <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small green accent-4">Done</a> -->
                     <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
                     {% endif %}
                 </div>
