Trim for username introduced

--- a/milestone3/templates/register.html
+++ b/milestone3/templates/register.html
@@ -21,7 +21,7 @@
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix brown-text text-darken-4"></i>
 						<input id="fullname" name="fullname" type="text" minlength="5"
-                            maxlength="35" class="validate" required>
+                            maxlength="35" class="validate" onchange="" required>
 						<label for="fullname">Full name</label>
 					</div>
                 </div>
