--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -31,6 +31,7 @@
                     <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
                         data-position="right" data-tooltip="URGENT!"></i>
                     {% endif %}
+                   
                 </div>
             </div>
             <div class="collapsible-body">
@@ -60,6 +61,8 @@
         <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
     {% endif %}
 
+    <p>{{ treatment_client }} treatment_client</p>
+    <p>{{ user.fullname }} user.fullname</p>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user.id) }}">
