--- a/milestone3/templates/add_treatment.html
+++ b/milestone3/templates/add_treatment.html
@@ -12,7 +12,7 @@
                 <select id="fullname" name="fullname" class="validate" required>
                     <option value="" disabled selected>Choose Client</option>
                     {% for user in users %}
-                        <option value="{{ user.id }}">{{ user.fullname }}</option>
+                        <option value="{{ user.id }}">{{ user.fullname }} - ({{ user.username }})</option>
                     {% endfor %}
                 </select>
                 <label for="client_id">Client</label>
@@ -25,6 +25,15 @@
                     <input id="treatment_client" name="treatment_client" minlength="5" maxlength="50"
                         type="text" class="validate">
                     <label for="treatment_client">Treatment Client Name</label>
+                </div>
+            </div>
+            <!-- treatment client -->
+            <div class="row hide">
+                <div class="input-field col s12">
+                    <i class="fas fa-pencil-alt prefix brown-text text-darken-4"></i>
+                    <input id="tusername" name="tusername" minlength="5" maxlength="50"
+                        type="text" class="validate">
+                    <label for="tusername">Treatment Client Username</label>
                 </div>
             </div>
             <!-- treatment type -->
@@ -71,7 +80,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-drafting-compass prefix brown-text text-darken-4"></i>
                     <textarea id="treatment_rom" name="treatment_rom" minlength="5"
-                    maxlength="200" class="materialize-textarea validate" required></textarea>
+                    maxlength="200" class="materialize-textarea validate"></textarea>
                     <label for="treatment_rom">Range of Movement</label>
                 </div>
             </div>
@@ -81,7 +90,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-vial prefix brown-text text-darken-4"></i>
                     <textarea id="treatment_special_tests" name="treatment_special_tests" minlength="5"
-                    maxlength="200" class="materialize-textarea validate" required></textarea>
+                    maxlength="200" class="materialize-textarea validate"></textarea>
                     <label for="treatment_special_tests">Special/Functional Tests</label>
                 </div>
             </div>
@@ -91,7 +100,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-hands prefix brown-text text-darken-4"></i>
                     <textarea id="treatment_palpation" name="treatment_palpation" minlength="5"
-                        maxlength="200" class="materialize-textarea validate" required></textarea>
+                        maxlength="200" class="materialize-textarea validate" ></textarea>
                     <label for="treatment_palpation">Palpation</label>
                 </div>
             </div>
