--- a/milestone3/templates/clients copy.html
+++ b/milestone3/templates/clients copy.html
@@ -10,12 +10,14 @@
             </a>
         </div>
     </div>
+    
     <div class="row">
-            {% for user in users %}
+        {% for user in clientlist %}
+            {% if user.fullname|lower != "greg goodrem" %}
             <div class="col s12 m4">
                 <div class="card brown darken-4 text-shadow center-align">
                     <div class="card-content white-text">
-                        <span class="card-title">{{ fullname }}</span>
+                        <span class="card-title">Hello world</span>
                     </div>
                     <div class="card-action">
                         <a href="{{ url_for('edit_client', user_id=user.id) }}" class="btn green accent-4">Records</a>
@@ -23,7 +25,8 @@
                     </div>
                 </div>
             </div>
-            {% endfor %}
+            {% endif %}
+        {% endfor %}
     </div>
 
 {% endblock %}
