--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -15,11 +15,11 @@
             <div class="col s12 m4">
                 <div class="card brown darken-4 text-shadow center-align">
                     <div class="card-content white-text">
-                        <span class="card-title">{{ fullname }}</span>
+                        <span class="card-title">{{ user.fullname }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="{{ url_for('edit_client', user_id=user.id) }}" class="btn green accent-4">Records</a>
-                        <a href="{{ url_for('delete_client', user_id=user.id) }}" class="btn red lighten-1">Delete</a>
+                        <a href="{{ url_for('edit_client', user_id=user._id ) }}" class="btn green accent-4">Records</a>
+                        <a href="{{ url_for('delete_client', user_id=user._id ) }}" class="btn red lighten-1">Delete</a>
                     </div>
                 </div>
             </div>
